@@ -1,5 +1,13 @@
 2008-07-23  Suman Manjunath  <msuman@novell.com>
 
+	* exchange-account-listener.c (add_cal_esource),
+	(add_addressbook_sources): Code cleanup. 
+	* exchange-mapi-account-setup.c (exchange_mapi_cal_check),
+	(exchange_mapi_cal_commit): Set the relative URI of newly created
+	folders correctly, code cleanup. 
+
+2008-07-23  Suman Manjunath  <msuman@novell.com>
+
 	* exchange-account-listener.c (add_cal_esource): Default folders 
 	should not be deletable. 
 	* exchange-mapi-account-setup.c (exchange_mapi_cal_commit): Set 
